--- a/portfolio-3-style-1_v1.html
+++ b/portfolio-3-style-1_v1.html
@@ -121,14 +121,7 @@
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/le370250.jpg" alt="Lands End" />
-                                <!--<div>
-                                    <!--<a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/1.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
-                                    </a>-->
-                                    <!--<a href="https://roberthunt.com/lands_end2.html">
-                                        <i class="zmdi zmdi-link"></i>
-                                    </a>
-                                </div>-->
+                                
                             </div>
                             <div class="project-title">
                                 <a href="https://roberthunt.com/lands_end2.html"><h5 class="mb-5">Lands End </h4></a>&ensp;<i class="zmdi zmdi-link"></i>
@@ -173,21 +166,14 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item work3d print web percent-33">
+                        <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/3/style1/4.jpg" alt="MiniPo" />
-                                <div class="zoom-icon">
-                                    <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/3/style1/4.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
-                                    </a>
-                                    <a href="portfolio-details.html">
-                                        <i class="zmdi zmdi-link"></i>
-                                    </a>
-                                </div>
+                                <img src="https://roberthunt.com/images/yosemite370250.jpg" alt="Yosemite" />
+                                
                             </div>
                             <div class="project-title">
-                                <a href="portfolio-details.html"><h4 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href="https://roberthunt.com/yosemite-valley.html"><h5 class="mb-5">Morning Storm In The Yosemite Valley </h4></a>&ensp;<i class="zmdi zmdi-link"></i>
+                                <h5></h5>
 								<hr class="line"/>
                             </div>
                         </div>
@@ -352,7 +338,7 @@
                     <div class="left pull-left">
                         <p>Copyright &copy; 2025 R M Hunt Fine Art.</p>
                     </div>
-                    <div class="social-icon simple pull-right">
+                    <!--<div class="social-icon simple pull-right">
 						<ul class="clearfix">
 							<li><a href="http://www.facebook.com" target="_blank"><i class="zmdi zmdi-facebook"></i></a></li>
 							<li><a href="http://www.twitter.com" target="_blank"><i class="zmdi zmdi-twitter"></i></a></li>
@@ -360,7 +346,7 @@
 							<li><a href="http://www.linkedin.com" target="_blank"><i class="zmdi zmdi-linkedin"></i></a></li>
 							<li><a href="http://www.instagram.com" target="_blank"><i class="zmdi zmdi-instagram"></i></a></li>
 						</ul>
-					</div>
+					</div>-->
                 </div>
             </div>
         </div>
