--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
 
-    <title>R M Hunt Fine Art - Twilight At Robbins Creek</title>
+    <title>R M Hunt Fine Art - Morning Storm in Yosemite</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -93,7 +93,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Twilight At Robbins Creek</h4>
+						<h4 class="mb-5">Morning Storm In The Yosemite Valley</h4>
 					</div>
 				</div>
 			</div>
@@ -107,20 +107,20 @@
 				
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/robbins_large.jpg" alt="Robbins Creek">
-							<img src="https://roberthunt.com/images/robbins_large.jpg" alt="Robbins Creek" />
+						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">
+							<img src="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite Valley" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Twight At Robbins Creek</h3>
-						<p>This is beatiful creek lined with Dogwood trees somewhere near Robbins, California. Not much out here but farm fields. It's possible this is the Sacramento River, but it was so many years ago, I don't remember.</p>
+						<h3>Morning Storm In The Yosemite Valley</h3>
+						<p>El Capitan rises 3000 feet on the left and Bridalveil falls on the right. Countless photographs and paintings of such an iconic view. You can only catch this at the right time of year and when storms come passing through. It's serendipity in tandem with luck.</p>
 						<ul class="work-info pt-40">
-							<li><span>Medium :</span> <p>Acrylic On Wood Panel</p></li>
-							<li><span>Created:</span> <p>1996</p></li>
-							<li><span>Size :</span> <p>25cm x 40cm</p></li>
+							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
+							<li><span>Created:</span> <p>2025</p></li>
+							<li><span>Size :</span> <p>20cm x 36cm | 8 in x 14.25 in</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
