--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -116,7 +116,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
 						<h3>Morning Storm In The Yosemite Valley</h3>
-						<p>El Capitan rises 3000 feet on the left and on the right, Bridalveil falls. Countless photographs and paintings of such an iconic view. The walls of the cliffs made wet from rain of the passing storm. This is being in the right place at the right time. Serendipity with a touch of luck.</p>
+						<p>El Capitan rises 3000 feet on the left and on the right, Bridalveil falls. Countless photographs and paintings of such an iconic view. Half Dome peeks through in the distance. The walls of the cliffs made wet from rain of the passing storm. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							<li><span>Created:</span> <p>2025</p></li>
