--- a/robbins.html
+++ b/robbins.html
@@ -116,7 +116,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
 						<h3>Twight At Robbins Creek</h3>
-						<p>This is beatiful creek lined with Dogwood trees somewhere near Robbins, California. Not much out here but farm fields. It's possible this is the Sacramento River, but it was so many years ago, I don't remember.</p>
+						<p>A peaceful waterway lined with dogwood trees somewhere near Robbins, California. Not much out here but farms and open fields. It's possible this is the Sacramento River, but it was so many years ago, I don't remember.</p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Acrylic On Wood Panel</p></li>
 							<li><span>Created:</span> <p>1996</p></li>
