--- a/contact-us.html
+++ b/contact-us.html
@@ -124,7 +124,7 @@ hr.line1 {
                                             
                                         </li>
                                         <!-- HOME END -->
-                                        <li><a href="about-us.html">About</a>
+                                        <li><a href="abouta.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
                                         
