--- a/contact-us.html
+++ b/contact-us.html
@@ -157,7 +157,7 @@ hr.line1 {
 	</div>
 	<!-- Breadcrumbs End -->
     <!-- Error Content Section Start -->
-    <div class="error-content-area section-padding">
+    <div class="error-content-area section">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-text-center">
