--- a/contact-us.html
+++ b/contact-us.html
@@ -163,15 +163,16 @@ hr.line1 {
                 <div class="col-xs-12 col-sm-8 col-md-6 col-text-center">
                     <div class="error-content text-center">
                         <form
-  action="https://formspree.io/f/xldjvykg"
+  action="https://api.mizuforms.com/f/87eaf226-dd04-4277-943e-cbde2e6404f0"
   method="POST"
 >      
-  <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-  <input name="email" type="text" class="feedback-input" placeholder="Email" />
-  <textarea name="text" class="feedback-input" placeholder="Message"></textarea>
+  <input name="name" type="text" class="feedback-input" placeholder="Name" required />   
+  <input name="email" type="text" class="feedback-input" placeholder="Email" required />
+  <input type="hidden" name="_mf-redirectTo" value="https://roberthunt.com/thanks.html" />
+  <textarea name="text" class="feedback-input" placeholder="Message" ></textarea>
   <input type="submit" value="SUBMIT"/>
 </form><br></p>
-                       
+                  <<p>Or Send An Email To: <br><a href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p>  
                     </div>
                 </div>
             </div>
