--- a/lands_end2.html
+++ b/lands_end2.html
@@ -143,8 +143,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="left pull-left">
-                        <p>Copyright &copy; 2025 </p>
+                    <div>
+                        <center><p>Copyright &copy; 2025 R M Hunt Fine Art.</p></center>
                     </div>
                     
                 </div>
