--- a/index-a.html
+++ b/index-a.html
@@ -8,8 +8,11 @@
     <meta name="description" content="R M Hunt Fine Art oil paintings of the American Landscape">
     <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
+	<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art</title>
+    <title>R M Hunt Fine Art - Home</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -160,7 +163,7 @@
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="https://roberthunt.com/courthouse-towers.html"><h4 class="mb-5">Sunrise At Courthouse Towers</h4></a>
+                                <a href="https://roberthunt.com/courthouse-towers.html"><h4 class="mb-5">Courthouse Towers</h4></a>
                                 
 								<hr class="line"/>
                             </div>
@@ -175,7 +178,7 @@
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="https://roberthunt.com/yosemite-valley.html"><h4 class="mb-5">Morning Storm In The Yosemite Valley</h4></a>
+                                <a href="https://roberthunt.com/yosemite-valley.html"><h4 class="mb-5">Storm In Yosemite Valley</h4></a>
                                 
 								<hr class="line"/>
                             </div>
