--- a/contact-us.html
+++ b/contact-us.html
@@ -69,10 +69,16 @@ textarea {
 
 .p2 {
   font-family: Cormorant SC;
+  font-size: 22px;
+  text-align: center;
   }
 hr.line1 {
   border-top: 1px solid black; width:20%;
   }
+  
+span.email b {
+  display: none;
+}
 </style>
 
 </head>
@@ -172,8 +178,9 @@ hr.line1 {
   <textarea name="text" class="feedback-input" placeholder="Message" ></textarea>
   <input type="submit" value="SUBMIT"/>
 </form><br></p>
-                  <<p>Or Send An Email To: <br><a href='m&#97;ilt&#111;&#58;inf&#111;&#37;40&#37;72oberthu%&#54;Et%2&#69;&#99;&#111;m'>&#105;nf&#111;&#64;roberthu&#110;t&#46;com</a></p>  
+                  
                     </div>
+					<p class="p2">Or Send An Email To: &nbsp&nbsp<span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
                 </div>
             </div>
         </div>
@@ -181,7 +188,7 @@ hr.line1 {
     <!-- Error Content Section End -->
 	<hr class="devider"/>
     <!-- Footer Section Start -->
-    <footer class="footer white-bg ptb-20 clearfix">
+    <footer class="footer white-bg ptb-60 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
