--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
     <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
 	<style>
   body { 
-  background-color: rgb(250, 250, 250) !important; 
+  background-color: rgb(255, 255, 255) !important; 
   font-family: Cormorant SC;
   }
 form { max-width:420px; margin:50px auto; }
@@ -180,7 +180,7 @@ span.email b {
 </form><br></p>
                   
                     </div>
-					<p class="p2">Or Send An Email To: &nbsp&nbsp<span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
+					<p class="p2">Or Send An Email To: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@ span.email b {
     <!-- Error Content Section End -->
 	<hr class="devider"/>
     <!-- Footer Section Start -->
-    <footer class="footer white-bg ptb-60 clearfix">
+    <footer class="footer white-bg ptb-100 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
