--- a/contact-us.html
+++ b/contact-us.html
@@ -175,12 +175,12 @@ span.email b {
   <input name="name" type="text" class="feedback-input" placeholder="Name" required />   
   <input name="email" type="text" class="feedback-input" placeholder="Email" required />
   <input type="hidden" name="_mf-redirectTo" value="https://roberthunt.com/thanks.html" />
-  <textarea name="text" class="feedback-input" placeholder="Message" ></textarea>
+  <textarea name="text" class="feedback-input" placeholder="Message" required /></textarea>
   <input type="submit" value="SUBMIT"/>
 </form><br></p>
                   
                     </div>
-					<p class="p2">Or Send An Email To: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
+					<p class="p2">Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
                 </div>
             </div>
         </div>
