--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="MiniPo is a Minimal Portfolio Template">
-    <meta name="keywords" content="mininal , Personal portfolio template, Personal portfolio, Minimal personal, material design, portfolio, personal">
-    <meta name="author" content="regaltheme.com">
+    <meta name="description" content="R M Hunt Oil Painting Gallery of Landscapes">
+    <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
+    <meta name="author" content="roberthunt.com">
 
-    <title>Coming Soon || MiniPo</title>
+    <title>R M Hunt Fine Art - Coming Soon</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
