--- a/abouta.html
+++ b/abouta.html
@@ -46,7 +46,7 @@
 					<div class="col-xs-12 col-sm-2 col-md-3">
 						<div class="left">
 							<div class="logo">
-								<a href="index.html"><img src="https:roberthunt.com/images/rmh_logo.png" alt="RMH" />
+								<a href="index.html"><img src="https//:roberthunt.com/images/rmh_logo.png" alt="RMH" />
 								</a>
 							</div>
 						</div>
