--- a/abouta.html
+++ b/abouta.html
@@ -113,12 +113,12 @@
 					<div class="col-xs-12 col-sm-10 col-md-8 col-text-center">
 						<div class="single-post medium-post">
 							<div class="thumb">
-								
+t
 							</div>
 							<div class="blog-text">
 								<div class="title clearfix">
 									<div class="post-date pull-left">
-										<img src="https://roberthunt.com/images/mypic.jpg" alt="Picture of Me" />
+										<img src="https://roberthunt.com/images/mypict.jpg" alt="Picture of Me" />
 									</div>
 									<div class="title-like">
 										<p><i><bold>"Where the spirit does not work with the hand, there is no art."</i> ~ Leonardo da Vinci</p></bold>
