--- a/contact-us.html
+++ b/contact-us.html
@@ -180,7 +180,7 @@ span.email b {
 </form><br></p>
                   
                     </div>
-					<p class="p2">Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span>  
+					<center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
                 </div>
             </div>
         </div>
