--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@ textarea {
   margin-top:-4px;
   font-weight:700;
 }
-[type="submit"]:hover { background:#CC4949; }
+[type="submit"]:hover { background:#9ca095; }
 
 .p2 {
   font-family: Cormorant SC;
@@ -176,11 +176,11 @@ span.email b {
   <input name="email" type="text" class="feedback-input" placeholder="Email" required />
   <input type="hidden" name="_mf-redirectTo" value="https://roberthunt.com/thanks.html" />
   <textarea name="text" class="feedback-input" placeholder="Message" required /></textarea>
-  <input type="submit" value="SUBMIT"/>
+  <input type="submit" value="Send"/>
 </form><br></p>
-                  
+                  <center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
                     </div>
-					<center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
+					
                 </div>
             </div>
         </div>
