--- a/contact-us.html
+++ b/contact-us.html
@@ -154,8 +154,8 @@ span.email b {
 			<div class="row text-center">
 				<div class="col-xs-12">
 					<div class="page-title ptb-15">
-						<h1 class="mb-15">Contact Us</h1>
-						<h4 class="mb-5">We'd Love to Hear From You</h4>
+						<h1 class="mb-15">R M Hunt Fine Art</h1>
+						<h4 class="mb-5">contact us</h4>
 					</div>
 				</div>
 			</div>
