--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -140,12 +140,13 @@
 				</div>
 			</div>
             <div class="row text-center pb-80">
-                <div class="col-xs-12 col-sm-6 col-md-3 mobile-mb-30 tablet-mb-50">
+               <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="single-member">
 						<div class="thumb shine">
-							<a href="https://roberthunt.com/robbins.html"><img src="https://roberthunt.com/images/robbins370250.jpg" alt="Robbins Creek" /></a>
+						<a href="https://roberthunt.com/courthouse-towers.html"><img src="https://roberthunt.com/images/arches370250.jpg" alt="Courthouse Towers" /></a>
 						</div>
-						<h3 class="mb-5">Robbins Creek</h3></a>
+						<h3 class="mb-5">Courthouse Towers</h3>
+						<h4 class="no-margin"></h4>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3 mobile-mb-30 tablet-mb-50">
@@ -166,13 +167,12 @@
 						<h4 class="no-margin"></h4>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 mobile-mb-30 tablet-mb-50">
                     <div class="single-member">
 						<div class="thumb shine">
-						<a href="https://roberthunt.com/courthouse-towers.html"><img src="https://roberthunt.com/images/arches370250.jpg" alt="Member Image" /></a>
+							<a href="https://roberthunt.com/robbins.html"><img src="https://roberthunt.com/images/robbins370250.jpg" alt="Robbins Creek" /></a>
 						</div>
-						<h3 class="mb-5">Courthouse Towers</h3>
-						<h4 class="no-margin"></h4>
+						<h3 class="mb-5">Robbins Creek</h3></a>
                     </div>
                 </div>
             </div>
