--- a/contact-us.html
+++ b/contact-us.html
@@ -133,6 +133,9 @@ span.email b {
                                         <li><a href="abouta.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
+                                        <li><a href="index-a.html">Selected Works</a></l1>
+                                            
+                                        <!-- PORTFOLIO END -->
                                         
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
