--- a/index-a.html
+++ b/index-a.html
@@ -67,7 +67,7 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="firstpage-a.html">Home</a>
                                             
                                         <!-- HOME END -->
                                         <li><a href="abouta.html">About</a>
