--- a/contact-us.html
+++ b/contact-us.html
@@ -126,7 +126,7 @@ span.email b {
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="firstpage-a.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
