--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -71,6 +71,9 @@
                                         <li><a href="http://roberthunt.com/abouta.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
+                                        <li><a href="index-a.html">Selected Works</a></l1>
+                                            
+                                        <!-- PORTFOLIO END -->
                                         
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
