--- a/lands_end2.html
+++ b/lands_end2.html
@@ -70,7 +70,10 @@
                                         <!-- HOME END -->
                                         <li><a href="http://roberthunt.com/abouta.html">About</a>
                                         </li>
-                                        
+                                        <!-- PORTFOLIO START -->
+                                        <li><a href="index-a.html">Selected Works</a></l1>
+                                            
+                                        <!-- PORTFOLIO END -->
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
                                     </ul>
