--- a/lands_end2.html
+++ b/lands_end2.html
@@ -64,7 +64,7 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="firstpage-a.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
