--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -102,7 +102,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Fine Art Paintings</h4>
+						<h4 class="mb-5">Contemporary Fine Art Paintings</h4>
 					</div>
 				</div>
 			</div>
