--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -110,7 +110,7 @@
 				
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/arches1100.jpg" alt="Courthouse Towers">
+						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/arches1100.jpg" alt="Courthouse Towers">-->
 							<img src="https://roberthunt.com/images/arches1100.jpg" alt="Courthouse Towers" />
 						</a>
 					</div>
