--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -110,7 +110,7 @@
 				
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">
+						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
 							<img src="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite Valley" />
 						</a>
 					</div>
