--- a/robbins.html
+++ b/robbins.html
@@ -24,12 +24,12 @@
 
 
 .previous {
-  background-color: #f1f1f1;
+  background-color: #fff;
   color: #ccc;
 }
 
 .next {
-  background-color: #f1f1f1;
+  background-color: #fff;
   color: #ccc;
 }
 
@@ -147,7 +147,7 @@
 						</ul>	
 							
 								<div>
-									<ul class="work-info pt-40" "navigation"><br><br>
+									<ul class="work-info pt-40" "navigation clearfix"><br><br>
 										<li><a href="#" class="previous">&laquo; back</a>
                                            &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/lands_end2.html" class="next">Next &raquo;</li></a>
 									</ul>
