--- a/lands_end2.html
+++ b/lands_end2.html
@@ -109,7 +109,7 @@
 				
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/le_large.jpg" alt="Lands End">-->
+						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/le_large.jpg" alt="Lands End">
 							<img src="https://roberthunt.com/images/le_large.jpg" alt="Lands End" />
 						</a>
 					</div>
@@ -133,7 +133,12 @@
 										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 									</ul>
 								</div>
+								
 							</li>
+							<ul class="work-info pt-40" "navigation clearfix"><br><br>
+										<li><a href="https://roberthunt.com/robbins.html" class="previous">&laquo; back</a>
+                                           &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/lands_end2.html" class="next">Next &raquo;</li></a>
+									</ul>
 						</ul>
 					</div>
 				</div>
