--- a/robbins.html
+++ b/robbins.html
@@ -144,15 +144,22 @@
 							<li><span>Medium :</span> <p>Acrylic On Wood Panel</p></li>
 							<li><span>Created:</span> <p>1996</p></li>
 							<li><span>Size :</span> <p>25cm x 40cm</p></li>
-						</ul>	
-							
-								<div>
-									<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="#" class="previous">&laquo; back</a>
-                                           &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/lands_end2.html" class="next">Next &raquo;</li></a>
+						<li class="share"><span>Please Share :</span> 
+								<div class="social-icon style1">
+									<ul class="clearfix">
+										<li><a target="_blank" href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><i class="zmdi zmdi-facebook"></i></a></li>
+										<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-twitter"></i></a></li>
+										<li><a target="_blank" href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com"><i class="zmdi zmdi-pinterest"></i></a></li>
+										<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com"><i class="zmdi zmdi-linkedin"></i></a></li>
+										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 									</ul>
 								</div>
+								
 							</li>
+							<ul class="work-info pt-40" "navigation clearfix"><br><br>
+										<li><a href="https://roberthunt.com/robbins.html" class="previous">&laquo; back</a>
+                                           &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/lands_end2.html" class="next">Next &raquo;</li></a>
+									</ul>
 						</ul>
 					</div>
 				</div>
