--- a/robbins.html
+++ b/robbins.html
@@ -157,7 +157,7 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/robbins.html" class="previous">&laquo; back</a>
+										<li><a href="https://roberthunt.com/robbins.html" class="previous">&laquo; prev</a>
                                            &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/lands_end2.html" class="next">Next &raquo;</li></a>
 									</ul>
 						</ul>
