--- a/robbins.html
+++ b/robbins.html
@@ -130,7 +130,7 @@
 				
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
-						<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/robbins_large.jpg" alt="Robbins Creek">
+						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/robbins_large.jpg" alt="Robbins Creek">-->
 							<img src="https://roberthunt.com/images/robbins_large.jpg" alt="Robbins Creek" />
 						</a>
 					</div>
