--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -122,7 +122,7 @@
 						<p>The Courthouse Towers is a collection of tall stone towers located within the Park Avenue section of Arches National Park. The formation was named after its likeness to tall buildings in Park Avenue, New York City</p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
-							<li><span>Created:</span> <p>1997</p></li>
+							<li><span>Created:</span> <p>1996</p></li>
 							<li><span>Size :</span> <p>25cm x 40cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
@@ -134,7 +134,12 @@
 										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 									</ul>
 								</div>
+								
 							</li>
+							<ul class="work-info pt-40" "navigation clearfix"><br><br>
+										<li><a href="https://roberthunt.com/lands_end2.html" class="previous">&laquo; prev</a>
+                                           &nbsp&nbsp&nbsp&nbsp<a href="https://roberthunt.com/yosemite-valley.html" class="next">Next &raquo;</li></a>
+									</ul>
 						</ul>
 					</div>
 				</div>
