--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -122,8 +122,8 @@
 						<p>El Capitan rises 3000 feet on the left and on the right, Bridalveil falls. Countless photographs and paintings of such an iconic view. Half Dome peeks through in the distance. The walls of the cliffs made wet from rain of the passing storm. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
-							<li><span>Created:</span> <p>2025</p></li>
-							<li><span>Size :</span> <p>20cm x 36cm | 8 in x 14.25 in</p></li>
+							<li><span>Created:</span> <p>1996</p></li>
+							<li><span>Size :</span> <p>25cm x 40cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
@@ -134,7 +134,12 @@
 										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 									</ul>
 								</div>
+								
 							</li>
+							<ul class="work-info pt-40" "navigation clearfix"><br><br>
+										<li><a href="https://roberthunt.com/courthouse-towers.html" class="previous">&laquo; prev</a>
+                                           &nbsp&nbsp&nbsp&nbsp<a href="#" class="next">Next &raquo;</li></a>
+									</ul>
 						</ul>
 					</div>
 				</div>
