--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -137,8 +137,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/courthouse-towers.html" class="previous">&laquo; prev</a>
-                                           &nbsp&nbsp&nbsp&nbsp<a href="#" class="next">Next &raquo;</li></a>
+										<li><a href="https://roberthunt.com/courthouse-towers.html" style="margin-right: 50px;" class="previous">&laquo; prev</a>
+                                           <a href="#" class="next">Next &raquo;</li></a>
 									</ul>
 						</ul>
 					</div>
