--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -5,9 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="R M Hunt Oil Painting Gallery of Landscapes">
+    <meta name="description" content="R M Hunt Fine Art oil paintings of the American Landscape">
     <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
+	<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
     <title>R M Hunt Fine Art - Dawn At Courthouse Towers Moab Utah</title>
 
@@ -137,8 +140,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/lands_end2.html" style="margin-right: 50px;" class="previous">&laquo; prev</a>
-                                           <a href="https://roberthunt.com/yosemite-valley.html" class="next">Next &raquo;</li></a>
+										<li><a href="https://roberthunt.com/robbins.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                          <a href="https://roberthunt.com/lands_end2.html" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
