--- a/lands_end2.html
+++ b/lands_end2.html
@@ -139,8 +139,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/robbins.html" style="margin-right: 50px;" class="previous">&laquo; prev</a>
-                                           <a href="https://roberthunt.com/courthouse-towers.html" class="next">Next &raquo;</li></a>
+										<li><a href="https://roberthunt.com/robbins.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                           <a href="https://roberthunt.com/courthouse-towers.html" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
