--- a/courthouse-towers.html
+++ b/courthouse-towers.html
@@ -140,8 +140,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/robbins.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                          <a href="https://roberthunt.com/lands_end2.html" class="next">&#9654;</li></a>
+										<li><a href="https://roberthunt.com/lands_end2.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                          <a href="https://roberthunt.com/yosemite-valley.html" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
