--- a/lands_end2.html
+++ b/lands_end2.html
@@ -113,7 +113,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/le_large.jpg" alt="Lands End">-->
-							<img src="https://roberthunt.com/images/le_large.jpg" alt="Lands End" />
+							<img src="https://roberthunt.com/images/le_large1.jpg" alt="Lands End" />
 						</a>
 					</div>
 					
