--- a/index-a.html
+++ b/index-a.html
@@ -277,18 +277,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div>
-                        <center><p>Copyright &copy; 2025 R M Hunt Fine Art.</p></center>
+                    <div class="left pull-left">
+                        <p>Copyright &copy; 2025 R M Hunt Fine Art.</p>
                     </div>
-                    <!--<div class="social-icon simple pull-right">
+                    <div class="social-icon simple pull-right">
 						<ul class="clearfix">
-							<li><a href="http://www.facebook.com" target="_blank"><i class="zmdi zmdi-facebook"></i></a></li>
-							<li><a href="http://www.twitter.com" target="_blank"><i class="zmdi zmdi-twitter"></i></a></li>
-							<li><a href="http://www.pinterest.com" target="_blank"><i class="zmdi zmdi-pinterest"></i></a></li>
-							<li><a href="http://www.linkedin.com" target="_blank"><i class="zmdi zmdi-linkedin"></i></a></li>
-							<li><a href="http://www.instagram.com" target="_blank"><i class="zmdi zmdi-instagram"></i></a></li>
+						 
+							<li><a target="_blank" href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><i class="zmdi zmdi-facebook"></i></a></li>
+							<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-twitter"></i></a></li>
+							<li><a target="_blank" href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com"><i class="zmdi zmdi-pinterest"></i></a></li>
+							<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com"><i class="zmdi zmdi-linkedin"></i></a></li>
+							<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
 						</ul>
-					</div>-->
+					</div>
                 </div>
             </div>
         </div>
