--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -131,7 +131,7 @@
 								<div class="social-icon style1">
 									<ul class="clearfix">
 										<li><a target="_blank" href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><i class="zmdi zmdi-facebook"></i></a></li>
-										<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-twitter"></i></a></li>
+										<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-close"></i></a></li>
 										<li><a target="_blank" href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com"><i class="zmdi zmdi-pinterest"></i></a></li>
 										<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com"><i class="zmdi zmdi-linkedin"></i></a></li>
 										<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
