--- a/lands_end2.html
+++ b/lands_end2.html
@@ -21,7 +21,12 @@
     <link rel="stylesheet" href="style.css">
     <!-- modernizr js -->
     <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
+<Style>
+.material-icons {
+  font-family: 'Material Icons' !important;
+  text-transform: none;
+}
+</style>
 </head>
 
 <body>
