--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -194,12 +194,17 @@
                     </div>
                     <div class="social-icon simple pull-right">
 						<ul class="clearfix">
-						 
-							<li><a target="_blank" href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><i class="zmdi zmdi-facebook"></i></a></li>
-							<li><a target="_blank" href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings"><i class="zmdi zmdi-close"></i></a></li>
-							<li><a target="_blank" href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com"><i class="zmdi zmdi-pinterest"></i></a></li>
-							<li><a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com"><i class="zmdi zmdi-linkedin"></i></a></li>
-							<li><a target="_blank" href="https://api.whatsapp.com/send?text=https://roberthunt.com"><i class="zmdi zmdi-whatsapp"></i></a></li>
+						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.png" alt="Facebook" /></a></li>
+							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
+            <img src="https://roberthunt.com/images/x14.png" alt="Twitter" /></a></li>
+							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn" />
+        </a></li>
+							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp" /></a></i></a></li>
+							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest" /></a></i></a></li>
+							
 						</ul>
 					</div>
                 </div>
