--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -203,7 +203,7 @@
 							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
             <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp" /></a></i></a></li>
 							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest" /></a></i></a></li>
+            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest" /></a></li>
 							
 						</ul>
 					</div>
