--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -74,7 +74,7 @@
                                         <li><a href="abouta.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
-                                        <li><a href="index-a.html">Selected Works</a></l1>
+                                        <li><a href="index-a.html">Selected Works</a></li>
                                             
                                         <!-- PORTFOLIO END -->
                                         <!-- BLOG START -->
@@ -194,16 +194,16 @@
                     </div>
                     <div class="social-icon simple pull-right">
 						<ul>
-						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook" /></a></li>
+						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>
 							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
-            <img src="https://roberthunt.com/images/x14.png" alt="Twitter" /></a></li>
+            <img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>
 							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn" />
+            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn">
         </a></li>
 							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp" /></a></i></a></li>
+            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>
 							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest" /></a></li>
+            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
 							
 						</ul>
 					</div>
