--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -192,7 +192,7 @@
                     <div class="left pull-left">
                         <p>Copyright &copy; 2025 R M Hunt Fine Art.</p>
                     </div>
-                    <div class="social-icon simple pull-right">
+                    <div class="social-icon simple">
 						<ul>
 						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>
 							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
