--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class="social-icon simple pull-right">
 						<ul>
-						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>
+						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>
 							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
             <img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>
 							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
