--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -49,7 +49,7 @@
 					<div class="col-xs-12 col-sm-2 col-md-3">
 						<div class="left">
 							<div class="logo">
-								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="RMH" />
+								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo4.png" alt="RMH" />
 								</a>
 							</div>
 						</div>
