--- a/glacier-point.html
+++ b/glacier-point.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art - Morning Storm in Yosemite</title>
+    <title>R M Hunt Fine Art - Evening At Glacier Point</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -99,7 +99,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Morning Storm In The Yosemite Valley</h4>
+						<h4 class="mb-5">Evening At Glacier Point</h4>
 					</div>
 				</div>
 			</div>
@@ -114,19 +114,19 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
-							<img src="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite Valley" />
+							<img src="https://roberthunt.com/images/gp_large.jpg" alt="Glacier Point" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Morning Storm In The Yosemite Valley</h3>
-						<p>El Capitan rises 3000 feet on the left and on the right, Bridalveil falls. Countless photographs and paintings of such an iconic view. Half Dome peeks through in the distance. The walls of the cliffs made wet from rain of the passing storm. </p>
+						<h3>Evening At Glacier Point</h3>
+						<p>Glacier Point is a renowned viewpoint in Yosemite National Park, California, offering breathtaking panoramic views of Yosemite Valley, Half Dome, Yosemite Falls, and the surrounding Sierra Nevada mountains. Situated at an elevation of 7,214 feet, The Point is famous for its dramatic vistas, especially at sunset, and serves as a trailhead for hikes like the Four Mile Trail to Yosemite Valley or the Panorama Trail to Nevada Falls. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
-							<li><span>Created:</span> <p>1996</p></li>
-							<li><span>Size :</span> <p>25cm x 40cm</p></li>
+							<li><span>Created:</span> <p>2025</p></li>
+							<li><span>Size :</span> <p>20cm x 28cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
@@ -140,8 +140,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/courthouse-towers.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                           <a href="https://roberthunt.com/glacier-point.html" class="next">&#9654;</li></a>
+										<li><a href="https://roberthunt.com/yosemite-valley.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                           <a href="#" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
