--- a/index-a.html
+++ b/index-a.html
@@ -184,18 +184,18 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item work3d design new percent-33">
+                        <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/5.jpg" alt="MiniPo" />
+                                <img src="https://roberthunt.com/images/gp_370250.jpg" alt="Glacier Point" />
                                 <div class="zoom-icon">
-                                    <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/5.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
+                                    <a href="https://roberthunt.com/glacier-point.html">
+                                        <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="portfolio-details-5.html"><h4 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href="https://roberthunt.com/glacier-point.html"><h4 class="mb-5">Glacier Point</h4></a>
+                                
 								<hr class="line"/>
                             </div>
                         </div>
