--- a/index-a.html
+++ b/index-a.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="grid-item work3d print design percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/6.jpg" alt="MiniPo" />
+                                <img src="assets/img/portfolio/five/6.jpg" alt="RMH" />
                                 <div class="zoom-icon">
                                     <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/6.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/7.jpg" alt="MiniPo" />
+                                <img src="assets/img/portfolio/five/7.jpg" alt="RMH" />
                                 <div class="zoom-icon">
                                     <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/7.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
@@ -231,7 +231,7 @@
                         </div>
                         <div class="grid-item web print new percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/8.jpg" alt="MiniPo" />
+                                <img src="assets/img/portfolio/five/8.jpg" alt="RMH" />
                                 <div class="zoom-icon">
                                     <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/8.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
@@ -246,7 +246,7 @@
                         </div>
                         <div class="grid-item work3d design new percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/9.jpg" alt="MiniPo" />
+                                <img src="assets/img/portfolio/five/9.jpg" alt="RMH" />
                                 <div class="zoom-icon">
                                     <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/9.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
