--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="R M Hunt Fine Art oil paintings of the American Landscape">
-    <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
+    <meta name="keywords" content="fine art, paintings, california, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
 	<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
@@ -167,7 +167,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="single-member">
 						<div class="thumb shine">
-						<a href="https://roberthunt.com/robbins.html"><img src="https://roberthunt.com/images/robbins370250.jpg" alt="Robbins Creek" /></a>
+						<a href="https://roberthunt.com/robbins.html"><img src="https://roberthunt.com/images/gp_370250.jpg" alt="Glacier Point" /></a>
 						</div>
 						
                     </div>
