--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -167,7 +167,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="single-member">
 						<div class="thumb shine">
-						<a href="https://roberthunt.com/robbins.html"><img src="https://roberthunt.com/images/gp_370250.jpg" alt="Glacier Point" /></a>
+						<a href="https://roberthunt.com/glacier-point.html"><img src="https://roberthunt.com/images/gp_370250.jpg" alt="Glacier Point" /></a>
 						</div>
 						
                     </div>
