--- a/index-a.html
+++ b/index-a.html
@@ -199,18 +199,18 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item work3d print design percent-33">
+                        <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/6.jpg" alt="RMH" />
+                                <img src="https://roberthunt.com/images/ricon-del-mar_370250.jpg" alt="Ricon del Mar" />
                                 <div class="zoom-icon">
-                                    <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/6.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
+                                    <a href="https://roberthunt.com/rincon-del-mar.html">
+                                        <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="portfolio-details-5.html"><h4 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href="https://roberthunt.com/rincon-del-mar.html"><h4 class="mb-5">Rincon del Mar</h4></a>
+                                
 								<hr class="line"/>
                             </div>
                         </div>
