--- a/rincon-del-mar.html
+++ b/rincon-del-mar.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art - Evening At Glacier Point</title>
+    <title>R M Hunt Fine Art - Dawn at Ricon del Mar | Colombia</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -99,7 +99,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Evening At Glacier Point</h4>
+						<h4 class="mb-5">Dawn At Ricon del Mar | Colombia</h4>
 					</div>
 				</div>
 			</div>
@@ -114,19 +114,19 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
-							<img src="https://roberthunt.com/images/gp_large.jpg" alt="Glacier Point" />
+							<img src="https://roberthunt.com/images/rincon-del-mar_large.jpg" alt="Rincon del Mar" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Evening At Glacier Point</h3>
-						<p>Glacier Point is a renowned viewpoint in Yosemite National Park, California, offering breathtaking panoramic views of Yosemite Valley, Half Dome, Yosemite Falls, and the surrounding Sierra Nevada mountains. Situated at an elevation of 7,214 feet, The Point is famous for its dramatic vistas, especially at sunset, and serves as a trailhead for hikes like the Four Mile Trail to Yosemite Valley or the Panorama Trail to Nevada Falls. </p>
+						<h3>Dawn At Ricon del Mar | Colombia</h3>
+						<p>Rincón del Mar is a small, authentic fishing village on Colombia’s Caribbean coast. Known for its pristine white-sand beaches, crystal-clear turquoise waters, and laid-back atmosphere, it remains a hidden gem, largely untouched by mass tourism. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							<li><span>Created:</span> <p>2025</p></li>
-							<li><span>Size :</span> <p>20cm x 28cm</p></li>
+							<li><span>Size :</span> <p>20cm x 37cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
@@ -140,8 +140,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/yosemite-valley.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                           <a href="https://roberthunt.com/rincon-del-mar.html" class="next">&#9654;</li></a>
+										<li><a href="https://roberthunt.com/glacier-point.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                           <a href="#" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
