--- a/index-a.html
+++ b/index-a.html
@@ -216,16 +216,16 @@
                         </div>
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/7.jpg" alt="RMH" />
+                                <img src="https://roberthunt.com/images/tayrona370250.jpg" alt="Tayrona National Park" />
                                 <div class="zoom-icon">
-                                    <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/7.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
+                                    <a href="https://roberthunt.com/tayrona-national-park.html">
+                                        <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="portfolio-details-5.html"><h4 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href="https://roberthunt.com/tayrona-national-park"><h4 class="mb-5">Tayrona National Park</h4></a>
+                                
 								<hr class="line"/>
                             </div>
                         </div>
