--- a/tayrona-national-park.html
+++ b/tayrona-national-park.html
@@ -99,7 +99,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Dawn At Ricon del Mar | Colombia</h4>
+						<h4 class="mb-5">Tayrona National Park | Colombia</h4>
 					</div>
 				</div>
 			</div>
@@ -114,19 +114,19 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
-							<img src="https://roberthunt.com/images/rincon-del-mar_large.jpg" alt="Rincon del Mar" />
+							<img src="https://roberthunt.com/images/tayrona_large.jpg" alt="Tayrona National Park" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Dawn At Ricon del Mar | Colombia</h3>
-						<p>Rincón del Mar is a small, authentic fishing village on Colombia’s Caribbean coast. Known for its pristine white-sand beaches, crystal-clear turquoise waters, and laid-back atmosphere, it remains a hidden gem, largely untouched by mass tourism. </p>
+						<h3>Tayrona National Park | Colombia</h3>
+						<p>Tayrona is known for its biodiversity, dramatic landscapes, and cultural significance. The park encompasses tropical rainforests, cloud forests, and pristine beaches framed by the Sierra Nevada de Santa Marta mountains. Its coastline features turquoise waters, coral reefs, and iconic spots like Cabo San Juan, with palm-fringed shores and granite boulders. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							<li><span>Created:</span> <p>2025</p></li>
-							<li><span>Size :</span> <p>20cm x 37cm</p></li>
+							<li><span>Size :</span> <p>18cm x 46cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
 									<ul class="clearfix">
@@ -140,8 +140,8 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/glacier-point.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                           <a href="https://roberthunt.com/tayrona-national-park.html" class="next">&#9654;</li></a>
+										<li><a href="https://roberthunt.com/rincon-del-mar.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                           <a href="#" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
