--- a/index-a.html
+++ b/index-a.html
@@ -229,18 +229,18 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item web print new percent-33">
+                        <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/8.jpg" alt="RMH" />
+                                <img src="https://roberthunt.com/images/mtc.jpg" alt="more to come" />
                                 <div class="zoom-icon">
-                                    <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/8.jpg">
-                                        <i class="zmdi zmdi-fullscreen"></i>
+                                    <a href="">
+                                        <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="portfolio-details-5.html"><h4 class="mb-5">Portfolio Item Title</h4></a>
-                                <p>Print, Branding</p>
+                                <a href=""><h4 class="mb-5">More To Come</h4></a>
+                                
 								<hr class="line"/>
                             </div>
                         </div>
